# wgpu

./: Cargo.toml  README.md
bare_window/: Cargo.toml
bare_window/src/: app.rs  lib.rs  main.rs  state.rs  vertices.rs
bare_window/src/primitives/: mod.rs  triangle.rs
bare_window/src/state/: device.rs  gpu.rs  pipeline.rs  render_pass.rs  shader.wgsl
